--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,5 +1,18 @@
 @import "normilize.scss";
+@import "utils/material-design-icons";
 @import "utils/variables.scss";
 @import "scaffolding.scss";
 @import "utils/mixins.scss";
 @import "utils/fonts.scss";
+@import "blocks/advantages.scss";
+@import "blocks/footer.scss";
+@import "blocks/info.scss";
+@import "blocks/info-places.scss";
+@import "blocks/info-video.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/menu.scss";
+@import "blocks/products-info.scss";
+@import "blocks/services.scss";
+@import "blocks/social.scss";
+@import "blocks/sponsors.scss";
+@import "blocks/user-menu.scss";
