--- a/source/scss/utils/variables.scss
+++ b/source/scss/utils/variables.scss
@@ -2,3 +2,12 @@ $black: #000000;
 $white: #ffffff;
 $red: #cd3a0d;
 $gray: #ebebeb;
+$footer-gray: #4f4f4f;
+$navy: #004b9a;
+$mobile-font-size: 5vw;
+$break-point-450: 450px;
+$break-point-615: 615px;
+$break-point-500: 500px;
+$tablet-width: 767px;
+$desktop-width: 1200px;
+$mobile-width-only: 768px;
