--- a/source/scss/blocks/advantages.scss
+++ b/source/scss/blocks/advantages.scss
@@ -7,27 +7,37 @@
     @include list-unstyled();
   }
 
-  &__item-image {
-    display: block;
-
-    &--1 {
-      width: 42px;
-      height: 45px;
-      background-image: url("../img/advanatge-qualification.png");
+  &__item {
+    &-text {
+      color: #757575;
     }
 
-    &--2 {
-      width: 42px;
-      height: 41px;
-      background-image: url("../img/advantage-insurance.png");
-    }
+    &-image {
+      display: block;
+      background-repeat: no-repeat;
+      background-position: center;
 
-    &--3 {
-      width: 42px;
-      height: 49px;
-      background-image: url("../img/adavantage-benefit.png");
+      &--1 {
+        width: 42px;
+        height: 41px;
+
+        background-image: url("../img/advantage-insurance.png");
+      }
+
+      &--2 {
+        width: 42px;
+        height: 45px;
+        background-image: url("../img/advanatge-qualification.png");
+      }
+
+      &--3 {
+        width: 42px;
+        height: 49px;
+        background-image: url("../img/adavantage-benefit.png");
+      }
     }
   }
+
 
   @media (min-width: $tablet-width) {
 
@@ -56,6 +66,20 @@
       &-title {
         font-weight: bold;
         margin-bottom: 10px;
+      }
+    }
+  }
+  @media (min-width: $desktop-width) {
+    &__item {
+      flex-direction: row;
+      align-items: center;
+
+      &-image {
+        width: 30%;
+      }
+
+      &-wrapper {
+        width: 70%;
       }
     }
   }
