--- a/source/scss/blocks/info.scss
+++ b/source/scss/blocks/info.scss
@@ -22,10 +22,14 @@
       margin-top: 0;
     }
 
+    &__text {
+      color: #191919;
+      font-size: 1.5vw;
+    }
+
     &__title {
-      font-family: Oswald;
+      font-family: Oswald, sans-serif;
       width: auto;
-      text-transform: uppercase;
       @include h2-tablet-styles();
       position: relative;
       font-size: 2.5vw;
@@ -56,10 +60,37 @@
       flex-direction: column;
       align-items: center;
       position: absolute;
-      top: 10%;
+      top: 7%;
       right: 0;
       lost-waffle: 5/12;
     }
+
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 2%;
+    &__wrapper {
+      margin-top: 10%;
+
+      &-text {
+        padding-bottom: 8%;
+      }
+    }
+    &-right__wrapper {
+      position: unset;
+      margin-top: 10%;
+    }
+
+    &__title {
+      font-size: 40px;
+      letter-spacing: -1px;
+      line-height: 40px;
+    }
+
+    &__text {
+      font-size: 18px;
+    }
+
 
   }
 }
