--- a/source/scss/blocks/menu.scss
+++ b/source/scss/blocks/menu.scss
@@ -100,6 +100,11 @@
   }
 
   @media (min-width: $desktop-width) {
-    @include padding-paragraph();
+    width: 44%;
+    margin-left: 5%;
+
+    &__link {
+      font-size: 16px;
+    }
   }
 }
