--- a/source/scss/blocks/sponsors.scss
+++ b/source/scss/blocks/sponsors.scss
@@ -128,6 +128,16 @@
         display: block;
       }
     }
+
+  }
+
+  @media (min-width: $desktop-width) {
+    &__image {
+      height: 79px;
+    }
+    &__wrapper {
+      margin-bottom: 3%;
+    }
   }
 
 }
