--- a/source/scss/blocks/user-menu.scss
+++ b/source/scss/blocks/user-menu.scss
@@ -67,6 +67,8 @@
 
     &__button {
       width: 100%;
+      font-size: 14px;
+      height: 55px;
       margin-left: 15%;
     }
     display: flex;
@@ -84,4 +86,28 @@
       }
     }
   }
+  @media (min-width: $desktop-width) {
+    width: 40%;
+
+    &__item {
+      font-size: 18px;
+
+      &--button {
+        padding: 0;
+        align-items: center;
+      }
+    }
+
+    &__phone {
+      &:before {
+        font-size: 20px;
+      }
+    }
+
+    &__button {
+      font-size: 16px;
+      padding: 3% 5%;
+    }
+  }
+
 }
