--- a/source/scss/scaffolding.scss
+++ b/source/scss/scaffolding.scss
@@ -8,9 +8,13 @@ body {
   background-color: $white;
   @media (min-width: $tablet-width) {
     background-image: url("../img/background-tablet.png");
-    background-size: contain;
     background-repeat: no-repeat;
-    background-color: $gray;
+    background-color: $white;
+    background-size: 98% auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-size: 99% auto;
   }
 }
 
@@ -32,6 +36,10 @@ body {
     width: 100%;
     font-size: 2vw;
     line-height: 2vw;
+  }
+  @media (min-width: $desktop-width) {
+    font-size: 16px;
+    line-height: 20px;
   }
 }
 
