--- a/source/scss/utils/fonts.scss
+++ b/source/scss/utils/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-style: normal;
   font-weight: 500;
   src: url("../fonts/Oswald-Medium.woff2") format("woff2");
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   src: url("../fonts/Roboto-Medium.woff2") format("woff2");
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/Roboto-Regular.woff2") format("woff2");
