--- a/source/scss/blocks/info-places.scss
+++ b/source/scss/blocks/info-places.scss
@@ -104,4 +104,13 @@
       }
     }
   }
+
+  @media (min-width: 1400px) {
+    &__item {
+      &-text {
+        font-size: 1.5vw;
+      }
+    }
+  }
+
 }
