--- a/source/scss/blocks/social.scss
+++ b/source/scss/blocks/social.scss
@@ -5,4 +5,11 @@
   &__item {
     padding-left: 10px;
   }
+  @media (min-width: 1400px) {
+    &__link-image {
+      width: 50px;
+      height: 50px;
+    }
+  }
+
 }
