--- a/source/scss/scaffolding.scss
+++ b/source/scss/scaffolding.scss
@@ -41,6 +41,10 @@ body {
     font-size: 16px;
     line-height: 20px;
   }
+  @media (min-width: 1400px) {
+    font-size: 1.5vw;
+    line-height: 1.5vw;
+  }
 }
 
 html {
